# BPH-002-brainphart-voice-recorder

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Package.swift  README.md  RECOVERY-PLAN.md  dependencies.yaml
.claude/skills/bpv-swift/: SKILL.md
PRD/: prd-v1.md  prd-v2-hotkey-overlay-fix.md
Scripts/: build.sh  create-dmg.sh  setup.sh
Shaping/: shapeup-bet-voice-recorder.md
Sources/CVoiceRecorderCore/: module.modulemap
Sources/VoiceRecorder/: AppState.swift  AudioManager.swift  AutoPaste.swift  Config.swift  ContentView.swift  FloatingOverlay.swift  HistoryView.swift  Settings.swift  SettingsView.swift  VoiceRecorderApp.swift  WaveformView.swift
Sources/VoiceRecorderBridge/: AudioBridge.h  AudioBridge.mm  StorageBridge.h  StorageBridge.mm  VoiceRecorderBridge.h  WhisperBridge.h  WhisperBridge.mm
Sources/VoiceRecorderCore/: AudioConverter.cpp  AudioConverter.hpp  AudioRecorder.cpp  AudioRecorder.hpp  DatabaseManager.cpp  DatabaseManager.hpp  StorageManager.cpp  StorageManager.hpp  Types.hpp  WhisperEngine.cpp  WhisperEngine.hpp
Technical/: proposal-v1.md
TranscriptKeyboard/: Info.plist  KeyboardViewController.swift
VoiceRecorder/: AppIntents.swift  AudioPlayer.swift  AudioRecorder.swift  ContentView.swift  DatabaseManager.swift  FloatingPillWindow.swift  Info.plist  LiveActivityManager.swift  SharedStorage.swift  TranscriptionManager.swift  VoiceRecorder.entitlements  VoiceRecorderApp.swift  VoiceRecorderAttributes.swift
VoiceRecorder.xcodeproj/: project.pbxproj
VoiceRecorderWidgetExtension/: VoiceRecorderLiveActivity.swift  VoiceRecorderWidgetBundle.swift
docs/: GITHUB_CLI_QUICK_REFERENCE.md  GITHUB_CLI_REFERENCE.md  PRD.md  avaudioengine.md  nspanel-floating.md  oslog.md  whisper-cpp.md
ios/: Package.swift
ios/Sources/BrainPhartVoice/: AudioRecorder.swift  BrainPhartVoiceApp.swift  ContentView.swift  DatabaseManager.swift  FloatingPanel.swift  HistoryView.swift  ModeViews.swift  PlaybackView.swift  SettingsView.swift  TranscriptView.swift  TranscriptionManager.swift
